[package]
name = "talking-tom"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"

tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"

tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"

clap = { version = "4.5.49", features = ["derive"] }
color-print = "0.3.7"
terminal_size = "0.4.3"

rand = "0.9.2"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[build-dependencies]
tonic-prost-build = "0.14.2"
